<resources>
    <string name="app_name">TheITGuys</string>
    <string name="Title">The IT Guys</string>
    <string name="emailText">Enter your email information</string>
    <string name="passwordText">Enter your password</string>
    <string name="buttonConnect">Login</string>
    <string name="buttonRegister">Register an acount</string>
    <string name="ConversationListTitle">Conversations:</string>
    <string name="conversationSubjectEditText">Name of the conversation</string>
    <string name="conversationCreateButton">Create a new conversation</string>
    <string name="backButton">Back</string>
    <string name="SendMessage">Send</string>
    <string name="messageText">Your message...</string>
    <string name="pseudoText">pseudo:</string>
    <string name="cityText">City:</string>
    <string name="LastposText">Maps:</string>
    <string name="YourProfileButton">Your profile</string>
    <string name="EnteryournameText">Enter your username</string>
    <string name="EnteryourpasswordText">Enter your password</string>
    <string name="enteryourcity">Enter your city</string>
    <string name="selectonecity">Select one</string>
    <string name="registerbutton">Register</string>
    <string name="selectsex">Select your gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
</resources>
