<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.widget.LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:orientation="vertical"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="wrap_content"
        tools:context="com.thelittlewozniak.theitguys.MainActivity">

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/EnteryournameText" />

        <EditText
            android:id="@+id/usernameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/passwordreg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/EnteryourpasswordText" />

        <EditText
            android:id="@+id/passwordregtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/cityreg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enteryourcity"
            android:textSize="40sp" />

        <android.widget.LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_height="wrap_content"
            tools:context="com.thelittlewozniak.theitguys.MainActivity">

            <EditText
                android:id="@+id/cityregtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/buttonselectcity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/selectonecity" />

        </android.widget.LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Button" />
    </android.widget.LinearLayout>
</ScrollView>